Revision history for Perl extension Parallel::Forker

The contributors that suggested a given feature are shown in [].

* Parallel::Forker 1.224 2009/05/19

**	This package is now licensed under LGPL v3 and/or Artistic v2.0.

****	Fix ignore files to support GIT.

* Parallel::Forker 1.223 2008/11/14

***	Add in_parent method and recommend usage, rt40886. [Ton Voon]

* Parallel::Forker 1.222 2008/1/29

***	Run processes in sorted rather than hash order. [Bryce Denney]

****	Reorganize kit to use lib directory, for easier standalone use.

* Parallel::Forker 1.221 2007/6/12

***	Warn, but allow users to set SIG{CHLD}='IGNORE'. [Kevin Montuori]

****    Warn if use_sig_child is undefined, as need to know if on or off.

****	Report error if create or schedule a task, and the same name exists.

****	Documentation cleanups. [Bryce Denney]

* Parallel::Forker 1.220 2007/2/2

****	Add use_sig_child method, and accelerate poll.  [Darrell Bishop]

* Parallel::Forker 1.214 2007/2/1

****    Fix hang in applications that call poll without sig_child.
	This broke in 1.212 and 1.213. [Venkataramana Mokkapati]

* Parallel::Forker 1.213 2007/1/28

****    Internal refactoring of poll and wait_all routines.

****    Documentation cleanups. [Darrell Bishop]

* Parallel::Forker 1.212 2007/1/23

****    Extend poll() to allow multiple processes to complete. [Darrell Bishop]
	This means poll() has no return value; the old return was undocumented.

* Parallel::Forker 1.211 2006/10/03

****    Fix kill_tree causing _subprocesses error message

* Parallel::Forker 1.210 2006/05/19

***     Internal reorganization of modules and comments.

* Parallel::Forker 1.202 2006/04/05

****	Remove Schedule::Load dependency.  [Alan Burlison]

* Parallel::Forker 1.201 2006/03/30

***	Add last-run PID number to write_tree output file.  [Jeff Dutton]

***	Fix poll() setting activity with no runnable processes. [Jeff Dutton]

* Parallel::Forker 1.200 2005/10/19

**	First public release.
