@@ -1,11 +1,11 @@
 --- #YAML:1.0
 name:                Parallel-Forker
-version:             1.224
+version:             1.225
 abstract:            Parallel job forking and management, with expression based control
 license:             ~
 author:              
     - Wilson Snyder <wsnyder@wsnyder.org>
-generated_by:        ExtUtils::MakeMaker version 6.44
+generated_by:        ExtUtils::MakeMaker version 6.42
 distribution_type:   module
 requires:     
     Proc::ProcessTable:            0.4
