@@ -6,7 +6,7 @@ This is the Parallel::Forker Package.
 1.1 Copyright
 =============
 
-This package is Copyright 2002-2009 by Wilson Snyder
+This package is Copyright 2002-2010 by Wilson Snyder
 <wsnyder@wsnyder.org>.
 
    This program is free software; you can redistribute it and/or modify
