@@ -12,7 +12,7 @@ use Carp;
 use POSIX qw(sys_wait_h :signal_h);
 use vars qw($Debug $VERSION $HashId);
 
-$VERSION = '1.224';
+$VERSION = '1.225';
 
 $Debug = $Parallel::Forker::Debug;
 $HashId = 0;
@@ -522,7 +522,7 @@ undef.
 The latest version is available from CPAN and from
 L<http://www.veripool.org/>.
 
-Copyright 2002-2009 by Wilson Snyder.  This package is free software; you
+Copyright 2002-2010 by Wilson Snyder.  This package is free software; you
 can redistribute it and/or modify it under the terms of either the GNU
 Lesser General Public License Version 3 or the Perl Artistic License
 Version 2.0.
