@@ -25,7 +25,7 @@ This is the Parallel::Forker Package.
 @node Copyright, Summary, Top, Top
 @section Copyright
 
-This package is Copyright 2002-2009 by Wilson Snyder @email{wsnyder@@wsnyder.org}.
+This package is Copyright 2002-2010 by Wilson Snyder @email{wsnyder@@wsnyder.org}.
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of either the GNU Lesser General Public License
