@@ -2,6 +2,10 @@ Revision history for Perl extension Parallel::Forker
 
 The contributors that suggested a given feature are shown in [].
 
+* Parallel::Forker 1.225 2010/01/12
+
+****	Documentation updates.
+
 * Parallel::Forker 1.224 2009/05/19
 
 **	This package is now licensed under LGPL v3 and/or Artistic v2.0.
@@ -84,7 +88,7 @@ DESCRIPTION: Documentation on change history for this package
 
 This uses outline mode in Emacs.  See C-h m [M-x describe-mode].
 
-Copyright 2003-2009 by Wilson Snyder.  This program is free software; you
+Copyright 2003-2010 by Wilson Snyder.  This program is free software; you
 can redistribute it and/or modify it under the terms of either the GNU
 Lesser General Public License Version 3 or the Perl Artistic License
 Version 2.0.
